# RISC-V-Co-Simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
co_simulator/: CMakeLists.txt  co_simulator.cpp  co_simulator.h
examples/eratosthenes_sieve/: eratosthenes_sieve.c  eratosthenes_sieve.dis  eratosthenes_sieve.out
examples/fibonacci/: fibonacci.c  fibonacci.dis  fibonacci.out
examples/matrix_mult/: matrix_mult.c  matrix_mult.dis  matrix_mult.out
examples/nested_loops/: nested_loops.c  nested_loops.dis  nested_loops.out
examples/qsort/: qsort.c  qsort.dis  qsort.out
models/functional/: CMakeLists.txt  decoder.cpp  decoder.h  instruction.cpp  instruction.h  int.cpp  interpreter.h  memory.h  model.cpp  model.h  regfile.h
models/pipeline/modules/: address_exceptions.h  alu.h  cmp.h  common.h  data_mem_unit.h  gates.h  instr_mem_unit.h  regfile.h  register.h
models/pipeline/pipeline/: CMakeLists.txt  control_unit.h  hazard_unit.h  instr_exceptions.h  instruction.h  pipe.cpp  pipeline.cpp  pipeline.h  stages_states.h
models/shared/: lru_cache.h  mmu.h  mmu_fixed_offset.h  runtime.h  trace_writer.h
tests/: CMakeLists.txt  cosim_test.cpp  functional_test.cpp  integration_test.cpp  pipeline_test.cpp
utils/: CMakeLists.txt  debug.cpp  debug.h  file.h  load_elf.cpp  load_elf.h  macros.h  system.cpp  system.h
